chore: update last track

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
 
 				<p>
 					<i data-feather="music"></i> listen to <a href="" id="last-played">loading...</a>
-					<small>by spotify</small>
+					<small>scrobbled by lastfm</small>
 				</p>
 
 
