fix: fix stone.co url

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 			<main class="list">
 				<div class="site-description">
 					<p>
-						Head of Frontend Enginering @ <a href="https://stone.co">Stone.Co</a>.
+						Head of Frontend Enginering @ <a href="https://www.stone.co">Stone.Co</a>.
 						Previously @ <a href="https://capitual.com" rel="norefer">Capitual</a>, working on product development,
 						technical leadership and management on the final customer teams services and apps.
 						<strong>Brazilian. Latino. Community Lover. GDG Organizer.</strong>
