chore: update info

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,10 +8,10 @@
 			<main class="list">
 				<div class="site-description">
 					<p>
-						Head of Frontend Enginering @ <a href="https://www.stone.co">Stone.Co</a>.
+						Staff Frontend Engineer @ <a href="https://www.stone.co">Stone.Co</a>.
 						Previously @ <a href="https://capitual.com" rel="norefer">Capitual</a>, working on product development,
 						technical leadership and management on the final customer teams services and apps.
-						<strong>Brazilian. Latino. Community Lover. GDG Organizer.</strong>
+						<strong>Brazilian. Latino.</strong>
 						You can find me on <a href="https://linkedin.com/in/euduardoborges"><i data-feather="linkedin"></i> linkedin</a>, 
 						and  <a href="https://github.com/eduardoborges"><i data-feather="github"></i> github</a>.
 					</p>
