styles: enhance layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,8 +18,8 @@
 				</div>
 
 				<p>
-					<i data-feather="music"></i> listen to <a href="" id="last-played">loading...</a>
-					<small>scrobbled by lastfm</small>
+					<b class="color">#/ </b>listen to <a href="" id="last-played">loading...</a>
+					<small> • scrobbled by lastfm</small>
 				</p>
 
 
