--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,7 +8,7 @@
 			<main>
         <div class="container" style="margin: 20vh 0">
           <h1 class="title" style="font-size: 100px; margin: 0;">404</h1>
-          <p style="font-size: 40px;">lost? <a href="/">come back home</a> </p>
+          <p style="font-size: 40px;">perdidin? <a href="/">dê meia volta</a> </p>
         </div>
 			</main>
 			{{ partial "footer.html" . }}
