--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer>
   <div class="footer-info">
-    2022 - {{ dateFormat "2006" now }} eduardo borges |
+    {{ dateFormat "2006" now }} ⚡️
 
-    built with <a href="https://gohugo.io">hugo</a> & <a
-    href="https://github.com/athul/archie">archie theme</a> fork
+    feito com <a href="https://gohugo.io">hugo</a> & <a
+    href="https://github.com/athul/archie">archie</a> ✨
   </div>
 </footer>
 {{ if not .Site.IsServer }}
