--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,7 +2,7 @@
 {{ if isset .Data "Term" }}
 <h1>Entries tagged - "{{ .Data.Term }}"</h1>
 {{ else }}
-<h1 class="page-title">all posts</h1>
+<h1 class="page-title">lista de postagens</h1>
 {{ end }}
 
 <ul class="posts">
