--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,16 @@
 		<div class="title">
 			<h1 class="title">{{ .Title }}</h1>
 			<div class="meta">postado em {{ dateFormat "Jan 2, 2006" .Date }}{{ if .Draft }} <span class="draft-label">RASCUNHO</span> {{ end }}</div>
+
+			<small>
+			compartilhe no
+			<a href="https://www.linkedin.com/shareArticle?mini=false&url={{ .Permalink | urlize }}" target="_blank"><i data-feather="linkedin"></i>linkedinho</a>
+			ou na
+			<a href="http://twitter.com/share?url={{ .Permalink | urlize }}" target="_blank"><i data-feather="twitter"></i>rede do ellon musk</a>
+		</small>
 		</div>
+
+
 		{{ if isset .Params "tldr" }}
 		<div class="tldr">
 			<strong>tl;dr:</strong>
