fix: fix linkedin share

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
 
 			<small>
 			compartilhe no
-			<a href="https://www.linkedin.com/shareArticle?mini=false&url={{ .Permalink | urlize }}" target="_blank"><i data-feather="linkedin"></i>linkedinho</a>
+			<a href="https://www.linkedin.com/sharing/share-offsite/?url={{ .Permalink | urlize }}" target="_blank"><i data-feather="linkedin"></i>linkedinho</a>
 			ou na
 			<a href="http://twitter.com/share?url={{ .Permalink | urlize }}" target="_blank"><i data-feather="twitter"></i>rede do ellon musk</a>
 		</small>
