--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,7 @@
 				</div>
 
 				<p>
-					<b class="color">#/ </b>ouvindo <a href="" id="last-played">bip bop carregando...</a>
+					<b class="color">#/! </b>ouvindo <a href="" id="last-played">bip bop carregando...</a>
 					<small> • rastreado por lastfm</small>
 				</p>
 
