--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,9 +6,15 @@
     href="https://github.com/athul/archie">archie</a> ✨
   </div>
 </footer>
-{{ if not .Site.IsServer }}
-{{ template "_internal/google_analytics_async.html" . }}
-{{ end }}
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9MMLCJ5CMK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-9MMLCJ5CMK');
+</script>
 
 <script src="{{ $.Site.BaseURL }}/js/main.js"></script>
 <script>
