chore: layout updates

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,8 +2,7 @@
   <div class="footer-info">
     {{ dateFormat "2006" now }} ⚡️
 
-    feito com <a href="https://gohugo.io">hugo</a> & <a
-    href="https://github.com/athul/archie">archie</a> ✨
+    feito com <a href="https://gohugo.io">hugo</a> & hospedado por ☁️ <a href="https://pages.cloudflare.com/" target="_blank">  cloudflare pages</a>
   </div>
 </footer>
 
