--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,7 +10,7 @@
 	{{- end -}}
 
 	{{- if isset .Site.Params "favicon" -}}
-	<link rel="icon" type="image/jpeg" href="{{ $.Site.BaseURL }}/me.jpeg" />
+	<link rel="icon" type="image/png" href="{{ $.Site.BaseURL }}/favicon.png" />
 	{{- end -}}
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
