--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Fantasque Sans Mono';
   src: url('../fonts/FantasqueSansMono-Regular.woff2') format('woff2'),
-       url('../fonts/FantasqueSansMono-Regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-       url('../fonts/FantasqueSansMono-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/FantasqueSansMono-Regular.svg#FantasqueSansMono-Regular') format('svg'); /* Chrome < 4, Legacy iOS */
+       url('../fonts/FantasqueSansMono-Regular.woff') format('woff'), 
+       url('../fonts/FantasqueSansMono-Regular.ttf') format('truetype'), 
+       url('../fonts/FantasqueSansMono-Regular.svg#FantasqueSansMono-Regular') format('svg');
   font-weight: 400;
   font-style: normal;
 }
@@ -11,9 +11,9 @@
 @font-face {
   font-family: 'Fantasque Sans Mono';
   src: url('../fonts/FantasqueSansMono-Italic.woff2') format('woff2'),
-       url('../fonts/FantasqueSansMono-Italic.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-       url('../fonts/FantasqueSansMono-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/FantasqueSansMono-Italic.svg#FantasqueSansMono-Italic') format('svg'); /* Chrome < 4, Legacy iOS */
+       url('../fonts/FantasqueSansMono-Italic.woff') format('woff'), 
+       url('../fonts/FantasqueSansMono-Italic.ttf') format('truetype'), 
+       url('../fonts/FantasqueSansMono-Italic.svg#FantasqueSansMono-Italic') format('svg');
   font-weight: 400;
   font-style: italic;
 }
@@ -21,9 +21,9 @@
 @font-face {
   font-family: 'Fantasque Sans Mono';
   src: url('../fonts/FantasqueSansMono-BoldItalic.woff2') format('woff2'),
-       url('../fonts/FantasqueSansMono-BoldItalic.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-       url('../fonts/FantasqueSansMono-BoldItalic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/FantasqueSansMono-BoldItalic.svg#FantasqueSansMono-BoldItalic') format('svg'); /* Chrome < 4, Legacy iOS */
+       url('../fonts/FantasqueSansMono-BoldItalic.woff') format('woff'), 
+       url('../fonts/FantasqueSansMono-BoldItalic.ttf') format('truetype'), 
+       url('../fonts/FantasqueSansMono-BoldItalic.svg#FantasqueSansMono-BoldItalic') format('svg');
   font-weight: 700;
   font-style: italic;
 }
@@ -31,9 +31,9 @@
 @font-face {
   font-family: 'Fantasque Sans Mono';
   src: url('../fonts/FantasqueSansMono-Bold.woff2') format('woff2'),
-       url('../fonts/FantasqueSansMono-Bold.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-       url('../fonts/FantasqueSansMono-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/FantasqueSansMono-Bold.svg#FantasqueSansMono-Bold') format('svg'); /* Chrome < 4, Legacy iOS */
+       url('../fonts/FantasqueSansMono-Bold.woff') format('woff'), 
+       url('../fonts/FantasqueSansMono-Bold.ttf') format('truetype'), 
+       url('../fonts/FantasqueSansMono-Bold.svg#FantasqueSansMono-Bold') format('svg');
   font-weight: 700;
   font-style: normal;
 }
