feat: update personal information and links in index.html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,15 +8,13 @@
 			<main class="list">
 				<div class="site-description">
 					<p>
-						Staff Engineer <b class="color">@</b> <a href="https://www.stone.co">Stone.Co</a>,
+						Staff Engineer <b class="color">@</b> <a href="https://www.solfacil.com.br">Solfácil</a>,
+						tornando a energia solar acessível a todos os brasileiros.
+						Antes disso, Staff Engineer <b class="color">@</b> <a href="https://www.stone.co">Stone.Co</a>,
 						revolucionando o mercado de pagamentos, crédito e bancário no Brasil.
-						Antes disso, Engineering Manager <b class="color">@</b> <a href="https://capitual.com" rel="norefer">Capitual</a>,
-						gerenciando times em produtos que traziam o que há de melhor em moedas centralizadas e descentralizadas.
 						<br>
 						<strong>Brasileiro. Baiano. <a href="https://pt.wikipedia.org/wiki/Vaqueiro" referrerpolicy="no-referrer">Ex-vaqueiro</a></strong>.
 						<br/>
-						
-						
 					</p>
 					<br/>
 					
